KNN running with 4 predictors

--- a/walmartFinal.v3.ipynb
+++ b/walmartFinal.v3.ipynb
@@ -29,7 +29,10 @@
      "collapsed": true,
      "input": [
       "import time\n",
-      "import math "
+      "import math \n",
+      "import copy\n",
+      "import random\n",
+      "import statistics"
      ],
      "language": "python",
      "metadata": {},
@@ -82,7 +85,7 @@
        ]
       }
      ],
-     "prompt_number": 1
+     "prompt_number": 82
     },
     {
      "cell_type": "markdown",
@@ -108,12 +111,12 @@
       "            isNoted = 0\n",
       "            try:\n",
       "                if float(dayData[12]) > 2:\n",
-      "                    isNoted = dayData[0]\n",
+      "                    isNoted = dayData\n",
       "            except ValueError:\n",
       "                pass\n",
       "            try:\n",
       "                if float(dayData[13]) > 1:\n",
-      "                    isNoted = dayData[0]\n",
+      "                    isNoted = dayData\n",
       "            except ValueError:\n",
       "                pass\n",
       "            if first:\n",
@@ -139,43 +142,57 @@
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 83
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "def buildPredictorTargetArr(keyDict, trainDict, notedDays, weatherDict):\n",
+      "    indexJump = 3\n",
+      "    arrSize = 115\n",
       "    toreturn = {}\n",
       "    for storeKey in range(1,46):\n",
       "        dayArr = notedDays[storeKey]\n",
       "        for x in dayArr:\n",
       "                if x != 0:\n",
       "                    if toreturn.get(storeKey) is None:\n",
-      "                        tempArr = [0]*113\n",
-      "                        tempArr[0] = x\n",
-      "                        tempArr[1] = storeKey\n",
+      "                        tempArr = [0]*arrSize\n",
+      "                        tempdate = x[0]\n",
+      "                        tempArr[0] = tempdate\n",
+      "                        tempArr[1] = int(keyDict[str(storeKey)][0][0])\n",
+      "                        tempArr[3] = storeKey\n",
       "                        try:\n",
-      "                            tempIter = trainDict[x]\n",
+      "                            tempArr[2] = int(x[3])\n",
+      "                        except ValueError:\n",
+      "                            tempArr[2] = 'N/A'\n",
+      "                        try:\n",
+      "                            tempIter = trainDict[tempdate]\n",
       "                        except KeyError:\n",
       "                            print(str(x) + \" Failed\")\n",
       "                        for i in tempIter:\n",
       "                            if int(i[0]) == storeKey:\n",
-      "                                tempIndex = int(i[1]) + 1\n",
+      "                                tempIndex = int(i[1]) + indexJump\n",
       "                                tempArr[tempIndex] = int(i[2])\n",
       "                        toreturn[storeKey] = []\n",
       "                        toreturn[storeKey].append(tempArr)\n",
       "                    else:\n",
+      "                        tempdate = x[0]\n",
       "                        try:\n",
-      "                            tempIter = trainDict[x]\n",
+      "                            tempIter = trainDict[tempdate]\n",
       "                        except KeyError:\n",
-      "                            print(str(x) + \" Failed\")\n",
-      "                        tempArr = [0]*113\n",
-      "                        tempArr[0] = x\n",
-      "                        tempArr[1] = storeKey\n",
+      "                            print(str(x[0]) + \" Failed\")\n",
+      "                        tempArr = [0]*arrSize\n",
+      "                        tempArr[0] = tempdate\n",
+      "                        tempArr[1] = int(keyDict[str(storeKey)][0][0])\n",
+      "                        tempArr[3] = storeKey\n",
+      "                        try:\n",
+      "                            tempArr[2] = int(x[3])\n",
+      "                        except ValueError:\n",
+      "                            tempArr[2] = 'N/A'\n",
       "                        for i in tempIter:\n",
       "                            if int(i[0]) == storeKey:\n",
-      "                                tempIndex = int(i[1]) + 1\n",
+      "                                tempIndex = int(i[1]) + indexJump\n",
       "                                tempArr[tempIndex] = int(i[2])\n",
       "                        toreturn[storeKey].append(tempArr)\n",
       "    print(\"Done\")\n",
@@ -197,7 +214,7 @@
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 108
     },
     {
      "cell_type": "markdown",
@@ -218,10 +235,14 @@
       "    dataList = []\n",
       "    for key,value in trainedPreStoreDict.items():\n",
       "        for x in range(len(value)):\n",
-      "            tempDate = trainedPreStoreDict[key][x][0]\n",
-      "            struct_time = time.strptime(tempDate, \"%Y-%m-%d\")\n",
-      "            trainedPreStoreDict[key][x][0] = struct_time.tm_yday\n",
-      "            dataList.append(trainedPreStoreDict[key][x])\n",
+      "            try:\n",
+      "                tempDate = trainedPreStoreDict[key][x][0]\n",
+      "                struct_time = time.strptime(tempDate, \"%Y-%m-%d\")\n",
+      "                trainedPreStoreDict[key][x][0] = struct_time.tm_yday\n",
+      "                dataList.append(trainedPreStoreDict[key][x])\n",
+      "            except TypeError:\n",
+      "                print(\"AlreadyFormatted\")\n",
+      "                break\n",
       "    print(\"Done\")\n",
       "    return dataList\n",
       "        \n",
@@ -239,41 +260,22 @@
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 109
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def sim(dataList, compare):\n",
-      "    scoredDays = []\n",
-      "    simDict = []\n",
-      "    for x in dataList:\n",
-      "        tempScore = 0\n",
-      "        if x[0] == compare[0]:\n",
-      "            tempScore += 10\n",
-      "        if x[1] == compare[1]:\n",
-      "            tempScore += 5\n",
-      "        simDict.append((tempScore, x))\n",
-      "    simDict.sort()\n",
-      "    simDict.reverse()\n",
-      "    return simDict\n",
+      "def createTestAndTrain(data):\n",
+      "    trainingData = copy.deepcopy(data)\n",
+      "    testData = []\n",
+      "    for i in range(len(trainingData)//10):\n",
+      "        testData.append(trainingData.pop(random.randint(0, len(trainingData)-1)))\n",
+      "    print(\"Done\")\n",
+      "    return trainingData, testData\n",
       "\n",
-      "global simDict, compareArr, compareArrItems\n",
-      "compareArr = dataList[0]\n",
-      "compareArrItems = compareArr[2:]\n",
-      "simDict = sim(dataList, compareArr)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 69
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "print(compareArrItems)"
+      "global trainingData, testData\n",
+      "trainingData, testData = createTestAndTrain(dataList)"
      ],
      "language": "python",
      "metadata": {},
@@ -282,49 +284,91 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "[0, 0, 0, 0, 0, 0, 0, 0, 33, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
+        "Done\n"
        ]
       }
      ],
-     "prompt_number": 68
+     "prompt_number": 110
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def calcUnits(k, simDict):\n",
-      "    workDict = simDict[:k]\n",
-      "    predictedArr = [0]*111\n",
-      "    for x in workDict:\n",
-      "        dataArr = x[1]\n",
-      "        itemsArr = dataArr[2:]\n",
-      "        for x in range(len(itemsArr)):\n",
-      "            predictedArr[x] = predictedArr[x] + (itemsArr[x]/k)\n",
-      "    return predictedArr\n",
-      "    \n",
-      "global predictedArr\n",
-      "predictedArr = calcUnits(3, simDict)"
+      "print(len(testData))"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 71
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "128\n"
+       ]
+      }
+     ],
+     "prompt_number": 119
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def EvaluationNumRSMLE(predictedArr, compareArr):\n",
-      "    tempLog = 0\n",
-      "    for x in range(111):\n",
-      "        tempLog = tempLog + (math.log(predictedArr[x] + 1) - math.log(compareArr[x] + 1))**2\n",
-      "    toRoot = (1/111)*tempLog\n",
-      "    RSMLE = math.sqrt(toRoot)\n",
-      "    print(RSMLE)\n",
-      "    print(predictedArr)\n",
-      "    print(compareArr)\n",
-      "    \n",
-      "EvaluationNumRSMLE(predictedArr, compareArrItems)"
+      "def calculateSTDEV(trainingData):\n",
+      "    tempCalc = []\n",
+      "    for x in trainingData:\n",
+      "        if x[2] != 'N/A':\n",
+      "            tempCalc.append(x[2])\n",
+      "    stDev= statistics.stdev(tempCalc)\n",
+      "    print(stDev)\n",
+      "    return stDev\n",
+      "\n",
+      "global tempStdev\n",
+      "tempStdev = calculateSTDEV(trainingData)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "17.231174858659365\n"
+       ]
+      }
+     ],
+     "prompt_number": 111
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def sim(trainingData, testData, tempStdev):\n",
+      "    numberOfPredictors = 4\n",
+      "    tempIndexTest = 0 \n",
+      "    testKScoredArr = {}\n",
+      "    for compare in testData:\n",
+      "        simDict = []\n",
+      "        for x in trainingData:\n",
+      "            tempScore = 0\n",
+      "            dateDist = abs(compare[0] - x[0])\n",
+      "            tempScore += 10 - (dateDist/365)*10\n",
+      "            if x[2] != 'N/A' and compare[2] != 'N/A':\n",
+      "                tempuratureDist = abs(compare[2] - x[2])\n",
+      "                tempScore += 10 - (tempuratureDist/tempStdev)*10\n",
+      "            if x[1] == compare[1]:\n",
+      "                tempScore += 3\n",
+      "            if x[3] == compare[3]:\n",
+      "                tempScore += 1\n",
+      "            simDict.append((float(tempScore), x[numberOfPredictors:]))\n",
+      "        simDict.sort()\n",
+      "        simDict.reverse()\n",
+      "        testKScoredArr[tempIndexTest] = simDict\n",
+      "        tempIndexTest+=1\n",
+      "    print(\"Done\")\n",
+      "    return testKScoredArr\n",
+      "\n",
+      "global simDict\n",
+      "simDict = sim(trainingData, testData, tempStdev)"
      ],
      "language": "python",
      "metadata": {
@@ -335,13 +379,94 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "0.2611640543732364\n",
-        "[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 12.333333333333334, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 7.333333333333333, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.6666666666666666, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.3333333333333333, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 2.6666666666666665, 0.0, 0.0, 0.0, 0.0, 0.3333333333333333, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
-        "[0, 0, 0, 0, 0, 0, 0, 0, 33, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
+        "Done\n"
        ]
       }
      ],
-     "prompt_number": 72
+     "prompt_number": 135
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def runCalcAcross(k, simDict):\n",
+      "    predictedDict = {}\n",
+      "    for key,val in simDict.items():\n",
+      "        tempPredArr = calcUnits(k, val)\n",
+      "        predictedDict[key] = tempPredArr\n",
+      "    print(\"Done\")\n",
+      "    return predictedDict\n",
+      "\n",
+      "def calcUnits(k, simArr):\n",
+      "    workDict = simArr[:k]\n",
+      "    predictedArr = [0]*111\n",
+      "    for x in workDict:\n",
+      "        itemsArr = x[1]\n",
+      "        for x in range(len(itemsArr)):\n",
+      "            predictedArr[x] = predictedArr[x] + (itemsArr[x]/k)\n",
+      "    return predictedArr\n",
+      "    \n",
+      "global predictedDict\n",
+      "predictedDict = runCalcAcross(1, simDict)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Done\n"
+       ]
+      }
+     ],
+     "prompt_number": 138
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def runNumRSMLEAcross(predictedDict, compareTotalArr):\n",
+      "    numberOfPredictors = 4\n",
+      "    RSMLEList = []\n",
+      "    for key,val in predictedDict.items():\n",
+      "        RSMLEList.append(EvaluationNumRSMLE(val, compareTotalArr[key][numberOfPredictors:]))\n",
+      "    print(RSMLEList)\n",
+      "    print(statistics.mean(RSMLEList))\n",
+      "\n",
+      "def EvaluationNumRSMLE(predictedArr, compareSingleArr):\n",
+      "    tempLog = 0\n",
+      "    for x in range(111):\n",
+      "        tempLog = tempLog + (math.log(predictedArr[x] + 1) - math.log(compareSingleArr[x] + 1))**2\n",
+      "    toRoot = (1/111)*tempLog\n",
+      "    RSMLE = math.sqrt(toRoot)\n",
+      "    return RSMLE\n",
+      "    \n",
+      "runNumRSMLEAcross(predictedDict, testData)"
+     ],
+     "language": "python",
+     "metadata": {
+      "scrolled": true
+     },
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[0.0, 0.6006880768169701, 0.3248860784816297, 0.7914488315766539, 0.0, 0.15221958890635096, 0.5892411071191636, 0.2412500621546478, 0.0, 0.47386461244285943, 0.20709382702252266, 0.5492869780885333, 0.0, 0.0, 0.0, 0.6817962424314983, 0.227449638209184, 0.11793702490328797, 0.4917258914217038, 0.28221194879868977, 0.0, 0.6043078202233384, 0.226774848929352, 0.7804402242180086, 0.0, 0.4658667019424737, 0.4851646147341269, 0.3783967014620378, 0.5662008157508078, 0.6318655939098431, 0.12873387567378616, 0.0, 0.0, 0.4873578862164089, 0.5600738762104117, 0.0, 0.0, 0.0, 0.7939128109685043, 0.951215818079532, 0.0, 0.7668232215199424, 0.2693384150000585, 0.0, 0.0, 0.0, 0.4724022878598468, 0.6040621906497841, 0.0, 0.5620121973650198, 0.46348302810234826, 0.0, 0.0, 0.0, 0.0, 0.40862250668823225, 0.0, 0.0, 0.5235129096488743, 0.23249427470382716, 0.654703775930755, 0.0, 0.0, 0.7148753299325623, 0.06580092437969715, 0.0, 0.6265696620403732, 0.26487556915173727, 0.0, 0.0, 0.21668604923553653, 0.7427203469631528, 0.0, 0.08586124027704063, 0.5651489500678732, 0.6270495118023887, 0.16237601936647383, 0.0, 0.12170945637483917, 0.2913845271950565, 0.5685050932286486, 0.658846260496789, 0.0, 0.5900797250670294, 0.0, 0.5844740331616228, 0.0, 0.0, 0.0, 0.5258095545685456, 0.4736875800945404, 0.0, 0.0, 0.0, 0.20370108529091402, 0.46136259257404455, 0.09571741786854562, 0.0, 0.46169874340019257, 0.0, 0.0, 0.0, 0.0, 0.4643177829819903, 0.49707806238506486, 0.0, 0.7091103176589032, 0.3313202344427268, 0.6654218521787663, 0.5761970950504145, 0.3898951088712094, 0.6431261422776772, 0.1317692064585748, 0.15218847546723943, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.6014606972405917, 0.2805377055178033, 0.0, 0.4869585519625652, 0.6696290596167963]\n",
+        "0.26138137710006987\n"
+       ]
+      }
+     ],
+     "prompt_number": 139
+    },
+    {
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {},
+     "source": [
+      "BELOW THIS IS WORK DONE BUT NEVER USED"
+     ]
     },
     {
      "cell_type": "code",
