--- a/walmartFinal.v3.ipynb
+++ b/walmartFinal.v3.ipynb
@@ -37,7 +37,76 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 50
+     "prompt_number": 7
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Run KNN Simulation"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "##This has its own cell block because it takes a long time to run\n",
+      "loadFiles()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Done key.csv\n",
+        "Done train.csv\n",
+        "Done weather.csv\n"
+       ]
+      }
+     ],
+     "prompt_number": 45
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "global kNum \n",
+      "kNum = 3\n",
+      "\n",
+      "notedDays = buildNotedDaysHash(keyDict, weatherDict)\n",
+      "trainedPreStoreDict = buildPredictorTargetArr(keyDict, trainDict, notedDays, weatherDict)\n",
+      "dataList = changeDateCreateKNNList(trainedPreStoreDict)\n",
+      "trainingData, testData = createTestAndTrain(dataList)\n",
+      "tempStdev = calculateSTDEV(trainingData)\n",
+      "simDict, temp = sim(trainingData, testData, tempStdev)\n",
+      "predictedDict = runCalcAcross(kNum, simDict)\n",
+      "runNumRSMLEAcross(predictedDict, testData)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Done\n",
+        "2012-12-25 Failed\n",
+        "2012-12-25 Failed\n",
+        "Done\n",
+        "Done\n",
+        "Done\n",
+        "17.206310400403936\n",
+        "Done\n",
+        "Done\n",
+        "[0.1264238362738074, 0.46397432929648885, 0.0, 0.5515473687765077, 0.02143417651538101, 0.24632504249245765, 0.28172295361744615, 0.1850261838393629, 0.17060546450199643, 0.5645187097772335, 0.5487125528767476, 0.07544617027252339, 0.12197944623629102, 0.0, 0.0, 0.29823738199914823, 0.0, 0.5306051611654278, 0.0, 0.06648493476394668, 0.0, 0.39095386395950593, 0.31619701437462877, 0.0, 0.0, 0.0, 0.0, 0.5670061843139386, 0.31121948306841873, 0.0, 0.46533965396403737, 0.17622640202380566, 0.0, 0.49244236951180576, 0.18529767939542724, 0.3398744949273095, 0.3526718538680476, 0.4472215788595371, 0.0, 0.0, 0.0, 0.37373996829108086, 0.22915783510240442, 0.49311796379331513, 0.5319412998384861, 0.0, 0.5749553033803324, 0.13617007155982325, 0.44252852538044196, 0.35273361300503825, 0.0, 0.0, 0.5607418250239419, 0.4232136893771569, 0.4643177829819903, 0.8083155919805591, 0.0, 0.09002672437812297, 0.5499115986991971, 0.32735944091882707, 0.44125289414186947, 0.4994708668206142, 0.0, 0.22035538110899971, 0.40342404292699247, 0.0, 0.0, 0.440432760529161, 0.0, 0.4872842302148274, 0.0, 0.17691509471015573, 0.37235884579587447, 0.0, 0.4648652467610678, 0.36472398785056737, 0.0, 0.1092687166631235, 0.0, 0.0, 0.0, 0.0, 0.48394734943862766, 0.0, 0.10443230621866062, 0.40099214014311396, 0.0, 0.0, 0.0746833458162796, 0.25184443113801075, 0.0, 0.0, 0.5652916954257775, 0.0, 0.38864871322082967, 0.0, 0.3758010230453413, 0.0, 0.16577974158349296, 0.0, 0.30674594064948973, 0.1651931090351768, 0.37128196398970376, 0.557595891489263, 0.0, 0.0, 0.29624750985587667, 0.14453684365193215, 0.4374741281012921, 0.42334317960658047, 0.0, 0.38954209552746677, 0.43497126615132076, 0.0758797931900331, 0.40167564792495253, 0.5641716895689882, 0.19050215542390708, 0.22608408523022777, 0.0, 0.0, 0.42505529020692007, 0.4934634691204014, 0.5258095545685456, 0.0, 0.32626673313081, 0.0, 0.6615028227441422, 0.4338152587700053]\n",
+        "0.22889575598337789\n"
+       ]
+      }
+     ],
+     "prompt_number": 63
     },
     {
      "cell_type": "code",
@@ -85,7 +154,7 @@
        ]
       }
      ],
-     "prompt_number": 82
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -142,7 +211,7 @@
        ]
       }
      ],
-     "prompt_number": 83
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -214,7 +283,7 @@
        ]
       }
      ],
-     "prompt_number": 108
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
@@ -260,7 +329,7 @@
        ]
       }
      ],
-     "prompt_number": 109
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -288,26 +357,7 @@
        ]
       }
      ],
-     "prompt_number": 110
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "print(len(testData))"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "128\n"
-       ]
-      }
-     ],
-     "prompt_number": 119
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -332,22 +382,24 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "17.231174858659365\n"
+        "17.313092829775357\n"
        ]
       }
      ],
-     "prompt_number": 111
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "def sim(trainingData, testData, tempStdev):\n",
+      "    simDictFORPLOT = {}\n",
       "    numberOfPredictors = 4\n",
       "    tempIndexTest = 0 \n",
       "    testKScoredArr = {}\n",
       "    for compare in testData:\n",
-      "        simDict = []\n",
+      "        simArr = []\n",
+      "        simArrFORPLOT= []\n",
       "        for x in trainingData:\n",
       "            tempScore = 0\n",
       "            dateDist = abs(compare[0] - x[0])\n",
@@ -359,16 +411,20 @@
       "                tempScore += 3\n",
       "            if x[3] == compare[3]:\n",
       "                tempScore += 1\n",
-      "            simDict.append((float(tempScore), x[numberOfPredictors:]))\n",
-      "        simDict.sort()\n",
-      "        simDict.reverse()\n",
-      "        testKScoredArr[tempIndexTest] = simDict\n",
+      "            simArr1.append((float(tempScore), x[numberOfPredictors:]))\n",
+      "            simArrFORPLOT.append((float(tempScore), x))\n",
+      "        simArr.sort()\n",
+      "        simArrFORPLOT.sort()\n",
+      "        simArr.reverse()\n",
+      "        simArrFORPLOT.sort()\n",
+      "        testKScoredArr[tempIndexTest] = simDict1\n",
+      "        simDictFORPLOT[tempIndexTest] = simArrFORPLOT\n",
       "        tempIndexTest+=1\n",
       "    print(\"Done\")\n",
-      "    return testKScoredArr\n",
+      "    return testKScoredArr, simDictFORPLOT\n",
       "\n",
-      "global simDict\n",
-      "simDict = sim(trainingData, testData, tempStdev)"
+      "global simDict, simDictFORPLOT\n",
+      "simDict, simDictFORPLOT = sim(trainingData, testData, tempStdev)"
      ],
      "language": "python",
      "metadata": {
@@ -383,7 +439,7 @@
        ]
       }
      ],
-     "prompt_number": 135
+     "prompt_number": 51
     },
     {
      "cell_type": "code",
@@ -399,15 +455,22 @@
       "\n",
       "def calcUnits(k, simArr):\n",
       "    workDict = simArr[:k]\n",
+      "    kmax = max(workDict)[0]\n",
+      "    weightTot = 0\n",
       "    predictedArr = [0]*111\n",
+      "    wieghtSumArr = [0]*111\n",
       "    for x in workDict:\n",
-      "        itemsArr = x[1]\n",
-      "        for x in range(len(itemsArr)):\n",
-      "            predictedArr[x] = predictedArr[x] + (itemsArr[x]/k)\n",
+      "        itemsArr = x[1] \n",
+      "        weight = (x[0]/kmax)\n",
+      "        weightTot += weight\n",
+      "        for i in range(111):\n",
+      "            wieghtSumArr[i] = wieghtSumArr[i] + (itemsArr[i]*weight)\n",
+      "    for i in range(111):\n",
+      "            predictedArr[i] = (wieghtSumArr[i]/weightTot)\n",
       "    return predictedArr\n",
       "    \n",
       "global predictedDict\n",
-      "predictedDict = runCalcAcross(1, simDict)"
+      "predictedDict = runCalcAcross(kNum, simDict)"
      ],
      "language": "python",
      "metadata": {},
@@ -420,7 +483,7 @@
        ]
       }
      ],
-     "prompt_number": 138
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
@@ -428,6 +491,7 @@
      "input": [
       "def runNumRSMLEAcross(predictedDict, compareTotalArr):\n",
       "    numberOfPredictors = 4\n",
+      "    global RSMLEList\n",
       "    RSMLEList = []\n",
       "    for key,val in predictedDict.items():\n",
       "        RSMLEList.append(EvaluationNumRSMLE(val, compareTotalArr[key][numberOfPredictors:]))\n",
@@ -453,12 +517,47 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "[0.0, 0.6006880768169701, 0.3248860784816297, 0.7914488315766539, 0.0, 0.15221958890635096, 0.5892411071191636, 0.2412500621546478, 0.0, 0.47386461244285943, 0.20709382702252266, 0.5492869780885333, 0.0, 0.0, 0.0, 0.6817962424314983, 0.227449638209184, 0.11793702490328797, 0.4917258914217038, 0.28221194879868977, 0.0, 0.6043078202233384, 0.226774848929352, 0.7804402242180086, 0.0, 0.4658667019424737, 0.4851646147341269, 0.3783967014620378, 0.5662008157508078, 0.6318655939098431, 0.12873387567378616, 0.0, 0.0, 0.4873578862164089, 0.5600738762104117, 0.0, 0.0, 0.0, 0.7939128109685043, 0.951215818079532, 0.0, 0.7668232215199424, 0.2693384150000585, 0.0, 0.0, 0.0, 0.4724022878598468, 0.6040621906497841, 0.0, 0.5620121973650198, 0.46348302810234826, 0.0, 0.0, 0.0, 0.0, 0.40862250668823225, 0.0, 0.0, 0.5235129096488743, 0.23249427470382716, 0.654703775930755, 0.0, 0.0, 0.7148753299325623, 0.06580092437969715, 0.0, 0.6265696620403732, 0.26487556915173727, 0.0, 0.0, 0.21668604923553653, 0.7427203469631528, 0.0, 0.08586124027704063, 0.5651489500678732, 0.6270495118023887, 0.16237601936647383, 0.0, 0.12170945637483917, 0.2913845271950565, 0.5685050932286486, 0.658846260496789, 0.0, 0.5900797250670294, 0.0, 0.5844740331616228, 0.0, 0.0, 0.0, 0.5258095545685456, 0.4736875800945404, 0.0, 0.0, 0.0, 0.20370108529091402, 0.46136259257404455, 0.09571741786854562, 0.0, 0.46169874340019257, 0.0, 0.0, 0.0, 0.0, 0.4643177829819903, 0.49707806238506486, 0.0, 0.7091103176589032, 0.3313202344427268, 0.6654218521787663, 0.5761970950504145, 0.3898951088712094, 0.6431261422776772, 0.1317692064585748, 0.15218847546723943, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.6014606972405917, 0.2805377055178033, 0.0, 0.4869585519625652, 0.6696290596167963]\n",
-        "0.26138137710006987\n"
+        "[0.1954340348024127, 0.4658667019424737, 0.427763079299457, 0.0, 0.0, 0.0, 0.10546080602768777, 0.03097854632555665, 0.4894716085829708, 0.04195822990073644, 0.0, 0.0, 0.06580092437969715, 0.0, 0.0, 0.0, 0.0, 0.0, 0.503410016177597, 0.6218721659488671, 0.4999907241582092, 0.0, 0.5418700944496821, 0.0, 0.15221958890635096, 0.0, 0.0, 0.951215818079532, 0.0, 0.11793702490328797, 0.6035571171003606, 0.03249465818490344, 0.5292983354396141, 0.1951969085841895, 0.13438459063054833, 0.0, 0.35974277873424715, 0.6149553314473684, 0.3919387250452506, 0.5733468242473716, 0.0, 0.0, 0.0, 0.6143019331245492, 0.0, 0.574043412414196, 0.5518075772321985, 0.0, 0.0, 0.247903093863759, 0.13261824055643173, 0.0, 0.3015964468216129, 0.0, 0.502375894040005, 0.0, 0.4255166059167964, 0.2678759774807383, 0.0, 0.7804402242180086, 0.09571741786854562, 0.0, 0.0, 0.5986207478932813, 0.0, 0.0, 0.5298991477276748, 0.0, 0.7986075120987889, 0.0, 0.0, 0.0, 0.0, 0.8083155919805591, 0.6294959231153414, 0.11280601347113538, 0.0, 0.219604834755878, 0.0, 0.36504753074301705, 0.5600738762104117, 0.0, 0.0, 0.0, 0.18704214456470555, 0.561069251096073, 0.32198343491932624, 0.0, 0.0, 0.7026868690051966, 0.0, 0.0, 0.0, 0.31729201343330415, 0.1478338777114268, 0.0, 0.0, 0.433610570893467, 0.0, 0.5289545007573173, 0.4057203436886836, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.6218721659488671, 0.0, 0.0, 0.6273618090347348, 0.0, 0.6049594471471457, 0.16284469433335402, 0.0, 0.0, 0.0, 0.5143273874336258, 0.0, 0.0, 0.0, 0.15870488517860634, 0.0, 0.20293888533215396, 0.4597471999038565, 0.6000926153800558, 0.0, 0.0]\n",
+        "0.19782714633275938\n"
        ]
       }
      ],
-     "prompt_number": 139
+     "prompt_number": 15
+    },
+    {
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {},
+     "source": [
+      "Deeper Analysis / Graph Section"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def formatDataPlot(simDict, predictedDict, testData, k):\n",
+      "    plotFormat = {}\n",
+      "    for key in range(128):\n",
+      "        plotFormat[key+1] = [testData[key]]+[predictedDict[key]]+[simDict[key][:k]]\n",
+      "    print(\"Done\")\n",
+      "    return plotFormat\n",
+      "\n",
+      "# RSMLEList other useful Data Structure\n",
+      "hashFormatted = formatDataPlot(simDictFORPLOT, predictedDict, testData, kNum)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Done\n"
+       ]
+      }
+     ],
+     "prompt_number": 54
     },
     {
      "cell_type": "heading",
