--- a/walmartFinal.ipynb
+++ b/walmartFinal.ipynb
@@ -650,6 +650,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# the random data\n",
+    "x = [random.randint(1, 365) for x in range(1000)]\n",
+    "y = np.random.randn(1000)\n",
+    "\n",
+    "nullfmt   = NullFormatter()         # no labels\n",
+    "\n",
+    "# definitions for the axes\n",
+    "left, width = 0.1, 0.8\n",
+    "bottom, height = 0.1, 0.8\n",
+    "bottom_h = left_h = left+width+0.02\n",
+    "\n",
+    "rect_scatter = [left, bottom, width, height]\n",
+    "# rect_histx = [left, bottom_h, width, 0.2]\n",
+    "# rect_histy = [left_h, bottom, 0.2, height]\n",
+    "\n",
+    "# start with a rectangular Figure\n",
+    "plt.figure(1, figsize=(8,8))\n",
+    "\n",
+    "axScatter = plt.axes(rect_scatter)\n",
+    "# axHistx = plt.axes(rect_histx)\n",
+    "# axHisty = plt.axes(rect_histy)\n",
+    "\n",
+    "# no labels\n",
+    "# axHistx.xaxis.set_major_formatter(nullfmt)\n",
+    "# axHisty.yaxis.set_major_formatter(nullfmt)\n",
+    "\n",
+    "# the scatter plot:\n",
+    "axScatter.scatter(x, y)\n",
+    "\n",
+    "# now determine nice limits by hand:\n",
+    "binwidth = 0.25\n",
+    "# xymax = np.max( [np.max(np.fabs(x)), np.max(np.fabs(y))] )\n",
+    "# lim = ( int(xymax/binwidth) + 1) * binwidth\n",
+    "\n",
+    "axScatter.set_xlim( (0, 365) )\n",
+    "axScatter.set_ylim( (0, 1) )\n",
+    "\n",
+    "# bins = np.arange(-lim, lim + binwidth, binwidth)\n",
+    "# axHistx.hist(x, bins=bins)\n",
+    "# axHisty.hist(y, bins=bins, orientation='horizontal')\n",
+    "\n",
+    "# axHistx.set_xlim( axScatter.get_xlim() )\n",
+    "# axHisty.set_ylim( axScatter.get_ylim() )\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 47,
    "metadata": {
     "collapsed": false
